fix: docs and registration
